--- a/package.json
+++ b/package.json
@@ -19,4 +19,6 @@
   "homepage": "https://github.com/mateusuk/README-Generator#readme",
   "dependencies": {
     "fs": "^0.0.1-security",
-    "
+    "inquirer": "^9.1.4"
+  }
+}
